# special-engine

./: HACKING.md  README.md  pyproject.toml
src/ssdbench/: __init__.py  cli.py  config.py
src/ssdbench/reporting/: __init__.py  summary.py
src/ssdbench/runner/: __init__.py  fio_runner.py  metadata.py
src/ssdbench/scenarios/: __init__.py  loader.py  renderer.py  schema.json
src/ssdbench/scenarios/catalog/: 4k_randread.yaml  4k_randwrite.yaml  qd1_randread_latency.yaml  seq_read_128k.yaml  seq_write_128k.yaml
src/ssdbench/storage/: __init__.py  run_store.py
tests/: test_fio_parse.py  test_loader.py  test_renderer.py  test_run_store.py
tests/fixtures/: sample_fio_output.json
