[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssdbench"
version = "0.1.0"
description = "SSD benchmarking framework wrapping fio for FW/system engineering teams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Storage Systems Team" }
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
ssdbench = "ssdbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ssdbench = [
    "scenarios/schema.json",
    "scenarios/catalog/*.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
